[package]
name = "edit-chunks"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Split out chunks of a large file for editing, then put them back together again"
keywords = ["file"]
categories = ["command-line-utilities"]
homepage = "https://github.com/djc/edit-chunks"
repository = "https://github.com/djc/edit-chunks"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
structopt = "0.1"
structopt-derive = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
