[package]
name = "edit-chunks"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Split out chunks of a large file for editing, then put them back together again"
keywords = ["file"]
categories = ["command-line-utilities"]
homepage = "https://github.com/djc/edit-chunks"
repository = "https://github.com/djc/edit-chunks"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
structopt = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
